Update background image
- Updated background image by making my photo with the same name as the
  bg-masthead.jpg file.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">About me</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">What's up</p>
+          <p class="text-white-50 mb-4">I’m a driven individual/programmer-in-training with a strong capability in problem solving. I thrive in a team environment and loves challenges. In the past, I have been a real estate developer and business consultant. My diverse background makes me unique and sometimes brings a fresh perspective to problems we are facing. Currently I’m at GA to fulfill my passion in coding, and would like to find a full time job in the tech industry as a programmer. The industries that most excite me are healthcare, transportation, and space exploration. Rock climbing and playing guitar are my favorite past time activities.</p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Check it out!</a>
         </div>
       </div>
