Updated project 1-3 images
-Took screenshots of first 3 projects and saved as jpg

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-3 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/7.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/7.jpg" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Project 1
@@ -146,10 +146,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Project 2
               </div>
               <div class="project-name">
-                Project Name
+                Favorite Car
               </div>
             </div>
           </a>
@@ -159,10 +159,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Project 3
               </div>
               <div class="project-name">
-                Project Name
+                Bucket List
               </div>
             </div>
           </a>
@@ -172,10 +172,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Project 4
               </div>
               <div class="project-name">
-                Project Name
+                Capstone
               </div>
             </div>
           </a>
