--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Creative - Justin's Personal Portfolio</title>
+  <title>Justin's Personal Portfolio</title>
 
   <!-- Font Awesome Icons -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -46,7 +46,7 @@
             <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Resume</a>
+            <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -65,7 +65,7 @@
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">My intro</p>
+          <p class="text-white-75 font-weight-light mb-5">“Stay hungry, stay foolish” - Steve Jobs</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
         </div>
       </div>
@@ -80,7 +80,7 @@
           <h2 class="text-white mt-0">About me</h2>
           <hr class="divider light my-4">
           <p class="text-white-50 mb-4">I’m a driven individual/programmer-in-training with a strong capability in problem solving. I thrive in a team environment and loves challenges. In the past, I have been a real estate developer and business consultant. My diverse background makes me unique and sometimes brings a fresh perspective to problems we are facing. Currently I’m at GA to fulfill my passion in coding, and would like to find a full time job in the tech industry as a programmer. The industries that most excite me are healthcare, transportation, and space exploration. Rock climbing and playing guitar are my favorite past time activities.</p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Check it out!</a>
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Check out my skills!</a>
         </div>
       </div>
     </div>
@@ -92,32 +92,48 @@
       <h2 class="text-center mt-0">Skills</h2>
       <hr class="divider my-4">
       <div class="row">
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <h3 class="h4 mb-2">node.js</h3>
-            <p class="text-muted mb-0">anything else?</p>
+            <i class="fab fa-3x fa-node-js text-primary mb-4"></i>
+            <h3 class="h4 mb-2">node-js</h3>
+            <!-- <p class="text-muted mb-0">anything else?</p> -->
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Ruby on Rails</h3>
-            <p class="text-muted mb-0">check</p>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-            <h3 class="h4 mb-2">mongo</h3>
-            <p class="text-muted mb-0">what's mongo</p>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
+            <i class="fab fa-3x fa-js text-primary mb-4"></i>
             <h3 class="h4 mb-2">JavaScript</h3>
-            <p class="text-muted mb-0">JavaScript</p>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fab fa-3x fa-bootstrap text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Ruby on Rails</h3>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fas fa-3x fa-laptop-code text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Ruby on Rails</h3>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fab fa-3x fa-react text-primary mb-4"></i>
+            <h3 class="h4 mb-2">React</h3>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fas fa-3x fa-globe text-primary mb-4"></i>
+            <h3 class="h4 mb-2">mongo</h3>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fas fa-3x fa-heart text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Heroku, etc.</h3>
+            <!-- <p class="text-muted mb-0">JavaScript</p> -->
           </div>
         </div>
       </div>
@@ -172,10 +188,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Project 4
+                Capstone
               </div>
               <div class="project-name">
-                Capstone
+                Last Minute BnB
               </div>
             </div>
           </a>
@@ -184,10 +200,10 @@
   </section>
 
   <!-- Call to Action Section -->
-  <section class="page-section bg-dark text-white">
+  <section class="page-section bg-dark text-white" id="resume">
     <div class="container text-center">
       <h2 class="mb-4">Resume</h2>
-      <a class="btn btn-light btn-xl" href="https://update this link">Resume Link</a>
+      <a class="btn btn-light btn-xl" href="https://drive.google.com/file/d/1WzyZBHUyz8h5iZWIqLLmpzTLDEB6gwSE/view?usp=sharing">Resume Link</a>
     </div>
   </section>
 
@@ -198,15 +214,23 @@
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">Let's Get In Touch!</h2>
           <hr class="divider my-4">
-          <p class="text-muted mb-5">LinkedIn, email, etc.</p>
+          <p class="text-muted mb-5"></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
+        <div class="col-lg-3 ml-auto text-center mb-5 mb-lg-0">
+          <i class="fab fa-linkedin-in fa-3x mb-3 text-mute"></i>
+          <div><a href="https://www.linkedin.com/in/jishi">linkedin.com/in/jishi</a></div>
+        </div>
+        <div class="col-lg-3 ml-auto text-center mb-5 mb-lg-0">
+          <i class="fab fa-github fa-3x mb-3 text-muted"></i>
+          <div><a href="https://www.Github.com/justinshi001">Github.com/justinshi001</a></div>
+        </div>
+        <div class="col-lg-3 ml-auto text-center mb-5 mb-lg-0">
           <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
           <div>+1 (781) 819-0890</div>
         </div>
-        <div class="col-lg-4 mr-auto text-center">
+        <div class="col-lg-3 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
           <a class="d-block" href="mailto:neoboy0612@gmail.com">neoboy0612@gmail.com</a>
