--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
-
+  <!-- <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet"> -->
+  <!-- <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'> -->
+  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="css/creative.min.css" rel="stylesheet">
@@ -26,7 +27,6 @@
 </head>
 
 <body id="page-top">
-
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
@@ -61,7 +61,8 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">Welcome to Justin's Personal Portfolio!</h1>
+          <h1 class="text-uppercase text-white font-weight-bold">Justin Shi</h1>
+          <h4 class="text-300italic text-white font-weight">Software Engineer</h4>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
@@ -73,13 +74,13 @@
   </header>
 
   <!-- About Section -->
-  <section class="page-section bg-primary" id="about">
+  <section class="page-section bg-info" id="about">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0">About me</h2>
+          <h2 class="text-white mt-0">About Me</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">I’m a driven individual/programmer-in-training with a strong capability in problem solving. I thrive in a team environment and loves challenges. In the past, I have been a real estate developer and business consultant. My diverse background makes me unique and sometimes brings a fresh perspective to problems we are facing. Currently I’m at GA to fulfill my passion in coding, and would like to find a full time job in the tech industry as a programmer. The industries that most excite me are healthcare, transportation, and space exploration. Rock climbing and playing guitar are my favorite past time activities.</p>
+          <p class="text-black-50 mb-4">Currently looking for opportunities in software engineering. I'm a down-to-earth, roll-up-your-sleeves kind of guy; a medically-trained, curiosity-driven kind of mind; and an eyes-to-the-details, never-missed-a-deadline kind of project manager. If you want to learn more about me, let's connect.</p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Check out my skills!</a>
         </div>
       </div>
@@ -108,12 +109,12 @@
         <div class="col-lg-2 col-md-6 text-center">
           <div class="mt-5">
             <i class="fab fa-3x fa-bootstrap text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Ruby on Rails</h3>
+            <h3 class="h4 mb-2">Bootstrap</h3>
           </div>
         </div>
         <div class="col-lg-2 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-3x fa-laptop-code text-primary mb-4"></i>
+            <i class="fas fa-3x devicon-rails-plain colored text-primary mb-4"></i>
             <h3 class="h4 mb-2">Ruby on Rails</h3>
           </div>
         </div>
@@ -126,13 +127,46 @@
         <div class="col-lg-2 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-3x fa-globe text-primary mb-4"></i>
-            <h3 class="h4 mb-2">mongo</h3>
+            <h3 class="h4 mb-2">MongoDB</h3>
           </div>
         </div>
         <div class="col-lg-2 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-3x fa-heart text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Heroku, etc.</h3>
+            <i class="fab fa-3x devicon-github-plain colored text-primary mb-4"></i>
+            <h3 class="h4 mb-2">GitHub</h3>
+            <!-- <p class="text-muted mb-0">anything else?</p> -->
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fab fa-3x devicon-jquery-plain colored text-primary mb-4"></i>
+            <h3 class="h4 mb-2">jQuery</h3>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fab fa-3x devicon-heroku-original colored text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Heroku</h3>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fas fa-3x devicon-css3-plain-wordmark colored text-primary mb-4"></i>
+            <h3 class="h4 mb-2">CSS</h3>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fab fa-3x devicon-sass-original colored text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Sass</h3>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fas fa-3x devicon-postgresql-plain colored text-primary mb-4"></i>
+            <h3 class="h4 mb-2">PostgreSQL</h3>
+          </div>
+        </div>
             <!-- <p class="text-muted mb-0">JavaScript</p> -->
           </div>
         </div>
@@ -200,10 +234,10 @@
   </section>
 
   <!-- Call to Action Section -->
-  <section class="page-section bg-dark text-white" id="resume">
+  <section class="page-section bg-info text-white" id="resume">
     <div class="container text-center">
       <h2 class="mb-4">Resume</h2>
-      <a class="btn btn-light btn-xl" href="https://drive.google.com/file/d/1WzyZBHUyz8h5iZWIqLLmpzTLDEB6gwSE/view?usp=sharing">Resume Link</a>
+      <a class="btn btn-light btn-xl" target="_blank" href="https://drive.google.com/file/d/1WzyZBHUyz8h5iZWIqLLmpzTLDEB6gwSE/view?usp=sharing">Resume Link</a>
     </div>
   </section>
 
@@ -218,22 +252,18 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-3 ml-auto text-center mb-5 mb-lg-0">
+        <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
           <i class="fab fa-linkedin-in fa-3x mb-3 text-mute"></i>
           <div><a href="https://www.linkedin.com/in/jishi">linkedin.com/in/jishi</a></div>
         </div>
-        <div class="col-lg-3 ml-auto text-center mb-5 mb-lg-0">
+        <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
           <i class="fab fa-github fa-3x mb-3 text-muted"></i>
           <div><a href="https://www.Github.com/justinshi001">Github.com/justinshi001</a></div>
         </div>
-        <div class="col-lg-3 ml-auto text-center mb-5 mb-lg-0">
-          <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div>+1 (781) 819-0890</div>
-        </div>
-        <div class="col-lg-3 mr-auto text-center">
+        <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="mailto:neoboy0612@gmail.com">neoboy0612@gmail.com</a>
+          <a class="d-block" href="mailto:neoboy0612@gmail.com">neoboy0612 at gmail.com</a>
         </div>
       </div>
     </div>
