--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
           <div class="mt-5">
             <i class="fab fa-3x fa-node-js text-primary mb-4"></i>
             <h3 class="h4 mb-2">node-js</h3>
-            <!-- <p class="text-muted mb-0">anything else?</p> -->
           </div>
         </div>
         <div class="col-lg-2 col-md-6 text-center">
@@ -134,7 +133,6 @@
           <div class="mt-5">
             <i class="fab fa-3x devicon-github-plain colored text-primary mb-4"></i>
             <h3 class="h4 mb-2">GitHub</h3>
-            <!-- <p class="text-muted mb-0">anything else?</p> -->
           </div>
         </div>
         <div class="col-lg-2 col-md-6 text-center">
@@ -167,7 +165,6 @@
             <h3 class="h4 mb-2">PostgreSQL</h3>
           </div>
         </div>
-            <!-- <p class="text-muted mb-0">JavaScript</p> -->
           </div>
         </div>
       </div>
@@ -175,8 +172,10 @@
   </section>
 
   <!-- Portfolio Section -->
-  <section id="portfolio">
+  <section class="page-section" id="portfolio">
     <div class="container-fluid p-0">
+      <h2 class="text-center mt-0">Portfolio</h2>
+      <hr class="divider my-4">
       <div class="row no-gutters">
         <div class="col-lg-3 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
@@ -187,6 +186,8 @@
               </div>
               <div class="project-name">
                 Tic-tac-toe
+                <p class="project-description"> A single-page app that allows users to play the game (Html-Java-jQuery-AJAX)
+                </p>
               </div>
             </div>
           </a>
@@ -200,6 +201,8 @@
               </div>
               <div class="project-name">
                 Favorite Car
+                <p class="project-description"> A full stack application that allows users to custom build their own cars  and also make appointments with local dealers (Ruby-Ruby on rails API-Heroku)
+                </p>
               </div>
             </div>
           </a>
@@ -212,10 +215,13 @@
                 Project 3
               </div>
               <div class="project-name">
-                Bucket List
+                Wish List Tracker
+                <p class="project-description"> A web app allowing users to create and change the status of their own wish list (Node.js - Express API)
+                </p>
               </div>
             </div>
           </a>
+          <!-- <a class="btn btn-light btn-xl" target="_blank" href="https://justinshi001.github.io/Tic-Tac-Toe-Justin/">Open App</a> -->
         </div>
         <div class="col-lg-3 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
@@ -226,6 +232,8 @@
               </div>
               <div class="project-name">
                 Last Minute BnB
+                <p class="project-description"> A booking app that allows travellers to make reservations on their favorite apartments in short notice (React-Ruby)
+                </p>
               </div>
             </div>
           </a>
